[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mapflow-lint"
version = "0.1.0"
description = "Generate and audit explainable level-design route plans."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Edem Kebaili" }]
keywords = ["level-design", "game-design", "maps", "rpg", "quality-assurance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
mapflow-lint = "mapflow_lint.cli:main"

[project.urls]
Homepage = "https://github.com/Edemckb/mapflow-lint"
Issues = "https://github.com/Edemckb/mapflow-lint/issues"

[tool.setuptools.packages.find]
where = ["src"]

